--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -3,5 +3,6 @@
 
     <color name="bg_color">#FFD180</color>
     <color name="fence_color">#795548</color>
+    <color name="barrel_color">#795548</color>
 
 </resources>
