Send time elapsed on success

--- a/res/layout/activity_game.xml
+++ b/res/layout/activity_game.xml
@@ -16,6 +16,8 @@
         android:layout_alignParentRight="true"
         android:layout_marginBottom="10dp"
         android:layout_marginRight="10dp"
-        android:text="@string/start_time" />
+        android:text="@string/start_time"
+        android:textColor="@android:color/black"
+        android:textSize="20sp" />
 
 </RelativeLayout>
