--- a/res/layout/activity_success.xml
+++ b/res/layout/activity_success.xml
@@ -7,16 +7,27 @@
         android:id="@+id/textViewGameOver"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:layout_centerVertical="true"
+        android:layout_marginTop="100dp"
         android:text="@string/game_complete"
+        android:textAppearance="?android:attr/textAppearanceLarge" />
+
+    <TextView
+        android:id="@+id/textViewTime"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/textViewGameOver"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="20dp"
+        android:text="@string/start_time"
         android:textAppearance="?android:attr/textAppearanceLarge" />
 
     <Button
         android:id="@+id/buttonHome"
         android:layout_width="200dp"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/textViewGameOver"
+        android:layout_below="@+id/textViewTime"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="20dp"
         android:text="@string/home" />
