--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -2,20 +2,39 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/bg_color"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.app.ui.assignment.barrelrace.MainActivity" >
 
+    <TextView
+        android:id="@+id/textViewTitle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="15dp"
+        android:text="@string/app_name"
+        android:textAllCaps="true"
+        android:textColor="@color/text_color"
+        android:textSize="35sp"
+        android:textStyle="bold"
+        android:typeface="serif" />
+
     <Button
         android:id="@+id/buttonPlay"
         android:layout_width="200dp"
         android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
+        android:layout_below="@+id/textViewTitle"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="75dp"
-        android:text="@string/play" />
+        android:layout_marginTop="25dp"
+        android:background="@drawable/button_bg"
+        android:text="@string/play"
+        android:textColor="@android:color/white"
+        android:textSize="16sp"
+        android:textStyle="bold" />
 
     <Button
         android:id="@+id/buttonScores"
@@ -23,8 +42,12 @@
         android:layout_height="wrap_content"
         android:layout_alignLeft="@+id/buttonPlay"
         android:layout_below="@+id/buttonPlay"
-        android:layout_marginTop="35dp"
-        android:text="@string/view_scores" />
+        android:layout_marginTop="25dp"
+        android:textSize="16sp"
+        android:textStyle="bold"
+        android:background="@drawable/button_bg"
+        android:text="@string/view_scores"
+        android:textColor="@android:color/white" />
 
     <Button
         android:id="@+id/buttonSettings"
@@ -32,7 +55,11 @@
         android:layout_height="wrap_content"
         android:layout_alignLeft="@+id/buttonScores"
         android:layout_below="@+id/buttonScores"
-        android:layout_marginTop="35dp"
-        android:text="@string/settings" />
+        android:layout_marginTop="25dp"
+        android:background="@drawable/button_bg"
+        android:text="@string/settings"
+        android:textColor="@android:color/white"
+        android:textSize="16sp"
+        android:textStyle="bold" />
 
 </RelativeLayout>
