--- a/res/layout/activity_scores.xml
+++ b/res/layout/activity_scores.xml
@@ -4,7 +4,7 @@
     android:layout_height="match_parent" >
 
     <TextView
-        android:id="@+id/textViewHighScores"
+        android:id="@+id/textViewTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
@@ -12,13 +12,17 @@
         android:layout_marginLeft="35dp"
         android:layout_marginTop="40dp"
         android:text="@string/high_scores"
-        android:textSize="20sp" />
+        android:textAllCaps="true"
+        android:textColor="@color/text_color"
+        android:textSize="25sp"
+        android:textStyle="bold"
+        android:typeface="serif" />
 
     <ListView
         android:id="@+id/listViewScores"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
-        android:layout_below="@+id/textViewHighScores"
+        android:layout_below="@+id/textViewTitle"
         android:layout_marginTop="20dp" />
 
     <ProgressBar
@@ -33,6 +37,8 @@
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
         android:text="@string/no_scores"
+        android:textColor="@color/text_color"
+        android:textSize="20sp"
         android:visibility="gone" />
 
 </RelativeLayout>
