--- a/res/layout/activity_failure.xml
+++ b/res/layout/activity_failure.xml
@@ -8,10 +8,15 @@
         android:id="@+id/textViewGameOver"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:layout_centerVertical="true"
+        android:layout_marginTop="100dp"
         android:text="@string/game_over"
-        android:textAppearance="?android:attr/textAppearanceLarge" />
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:textColor="@color/text_color"
+        android:textSize="25sp"
+        android:textStyle="bold"
+        android:typeface="serif" />
 
     <Button
         android:id="@+id/buttonTryAgain"
@@ -19,8 +24,12 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/textViewGameOver"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="20dp"
-        android:text="@string/try_again" />
+        android:layout_marginTop="40dp"
+        android:background="@drawable/button_bg"
+        android:text="@string/try_again"
+        android:textColor="@android:color/white"
+        android:textSize="16sp"
+        android:textStyle="bold" />
 
     <Button
         android:id="@+id/buttonHome"
@@ -29,6 +38,10 @@
         android:layout_below="@+id/buttonTryAgain"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="20dp"
-        android:text="@string/home" />
+        android:background="@drawable/button_bg"
+        android:text="@string/home"
+        android:textColor="@android:color/white"
+        android:textSize="16sp"
+        android:textStyle="bold" />
 
 </RelativeLayout>
