--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -2,7 +2,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/bg_color"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
@@ -15,7 +14,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="15dp"
+        android:layout_marginTop="100dp"
         android:text="@string/app_name"
         android:textAllCaps="true"
         android:textColor="@color/text_color"
@@ -43,11 +42,11 @@
         android:layout_alignLeft="@+id/buttonPlay"
         android:layout_below="@+id/buttonPlay"
         android:layout_marginTop="25dp"
-        android:textSize="16sp"
-        android:textStyle="bold"
         android:background="@drawable/button_bg"
         android:text="@string/view_scores"
-        android:textColor="@android:color/white" />
+        android:textColor="@android:color/white"
+        android:textSize="16sp"
+        android:textStyle="bold" />
 
     <Button
         android:id="@+id/buttonSettings"
