--- a/res/layout/activity_settings.xml
+++ b/res/layout/activity_settings.xml
@@ -4,34 +4,41 @@
     android:layout_height="match_parent" >
 
     <TextView
-        android:id="@+id/textViewSettings"
+        android:id="@+id/textViewTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="35dp"
+        android:layout_marginTop="100dp"
         android:text="@string/settings"
-        android:textAppearance="?android:attr/textAppearanceMedium" />
+        android:textAllCaps="true"
+        android:textColor="@color/text_color"
+        android:textSize="25sp"
+        android:textStyle="bold"
+        android:typeface="serif" />
 
     <TextView
         android:id="@+id/textViewDiffLevel"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
-        android:layout_below="@+id/textViewSettings"
+        android:layout_below="@+id/textViewTitle"
         android:layout_marginLeft="35dp"
-        android:layout_marginTop="35dp"
+        android:layout_marginTop="20dp"
         android:text="@string/difficulty_level"
-        android:textAppearance="?android:attr/textAppearanceMedium" />
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:textColor="@color/text_color"
+        android:textSize="20sp"
+        android:textStyle="bold" />
 
     <RadioGroup
         android:id="@+id/radioGroupDiff"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/textViewSettings"
-        android:layout_marginLeft="30dp"
-        android:layout_marginTop="30dp"
-        android:layout_toRightOf="@+id/textViewDiffLevel"
+        android:layout_alignParentLeft="true"
+        android:layout_below="@+id/textViewDiffLevel"
+        android:layout_marginLeft="35dp"
+        android:layout_marginTop="20dp"
         android:orientation="horizontal" >
 
         <RadioButton
@@ -62,18 +69,21 @@
         android:layout_height="wrap_content"
         android:layout_alignLeft="@+id/textViewDiffLevel"
         android:layout_below="@+id/radioGroupDiff"
-        android:layout_marginTop="30dp"
+        android:layout_marginTop="20dp"
         android:text="@string/sound"
-        android:textAppearance="?android:attr/textAppearanceMedium" />
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:textColor="@color/text_color"
+        android:textSize="20sp"
+        android:textStyle="bold" />
 
     <RadioGroup
         android:id="@+id/radioGroupSound"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/radioGroupDiff"
-        android:layout_marginLeft="95dp"
-        android:layout_marginTop="25dp"
-        android:layout_toRightOf="@+id/textViewSound"
+        android:layout_alignParentLeft="true"
+        android:layout_below="@+id/textViewSound"
+        android:layout_marginLeft="30dp"
+        android:layout_marginTop="20dp"
         android:orientation="horizontal" >
 
         <RadioButton
@@ -93,11 +103,15 @@
 
     <Button
         android:id="@+id/buttonSave"
-        android:layout_width="wrap_content"
+        android:layout_width="200dp"
         android:layout_height="wrap_content"
         android:layout_below="@+id/radioGroupSound"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="40dp"
-        android:text="@string/save_changes" />
+        android:background="@drawable/button_bg"
+        android:text="@string/save_changes"
+        android:textColor="@android:color/white"
+        android:textSize="16sp"
+        android:textStyle="bold" />
 
 </RelativeLayout>
