--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <color name="bg_color">#FFECB3</color>
+    <color name="bg_color">#f4f4f4</color>
     <color name="text_color">#795548</color>
     <color name="fence_color">#795548</color>
     <color name="barrel_color">#795548</color>
