--- a/res/layout/activity_failure.xml
+++ b/res/layout/activity_failure.xml
@@ -5,7 +5,7 @@
     android:orientation="vertical" >
 
     <TextView
-        android:id="@+id/textViewGameOver"
+        android:id="@+id/textViewTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
@@ -22,7 +22,7 @@
         android:id="@+id/buttonTryAgain"
         android:layout_width="200dp"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/textViewGameOver"
+        android:layout_below="@+id/textViewTitle"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="40dp"
         android:background="@drawable/button_bg"
