--- a/res/layout/activity_success.xml
+++ b/res/layout/activity_success.xml
@@ -20,7 +20,7 @@
     </EditText>
 
     <TextView
-        android:id="@+id/textViewBravo"
+        android:id="@+id/textViewTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/editTextName"
@@ -36,7 +36,7 @@
         android:id="@+id/textViewGameOver"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/textViewBravo"
+        android:layout_below="@+id/textViewTitle"
         android:layout_centerHorizontal="true"
         android:layout_margin="20dp"
         android:text="@string/game_complete"
